# CampusVoice

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  README.md  docker-compose.gpu.yml  docker-compose.multi-worker.yml  docker-compose.smoke.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.base.json
scripts/: __init__.py  (+15 more)
services/api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_security_tokens.py  0003_privacy_controls.py  0004_write_challenges.py  0005_oidc_sessions.py  0006_notice_impact_migrations.py  0007_notice_migration_safety.py  0008_notice_current_and_receipt_repair.py
services/api/app/: __init__.py  main.py
services/api/app/api/: __init__.py  dependencies.py  router.py
services/api/app/api/routes/: action_logs.py  actions.py  asr.py  auth.py  correction.py  documents.py  events.py  health.py  hotwords.py  intent.py  knowledge.py  metrics.py  notice_radar.py  privacy.py  settings.py  tasks.py
services/api/app/core/: __init__.py  config.py  metrics.py  observability.py  startup.py
services/api/app/db/: __init__.py  base.py  session.py  types.py
services/api/app/jobs/: __init__.py  retention.py  sqlite_backup.py
services/api/app/models/: __init__.py  entities.py  enums.py
services/api/app/repositories/: __init__.py  actions.py  documents.py  events.py  hotwords.py  settings.py  tasks.py
services/api/app/schemas/: __init__.py  actions.py  asr.py  auth.py  common.py  correction.py  domain.py  health.py  intent.py  knowledge.py  metrics.py  notice_radar.py  privacy.py  settings.py
services/api/app/security/: __init__.py  authentication.py  confirmation.py  oidc.py  websocket_tickets.py  write_challenges.py
services/api/app/services/: errors.py  event_service.py  health.py  hotword_service.py  lineage.py  settings_service.py  task_service.py
services/api/app/services/actions/: __init__.py  completeness.py  service.py
services/api/app/services/asr/: __init__.py  adapters.py  connections.py  persistence.py  session.py
services/api/app/services/correction/: __init__.py  engine.py  persistence.py
services/api/app/services/intent/: __init__.py  conversation.py  parser.py
services/api/app/services/knowledge/: __init__.py  answering.py  parser.py  repository.py  retrieval.py  service.py
services/api/docs/: api-contract.md  data-model.md
services/api/requirements/: README.md
services/api/scripts/: check_critical_coverage.py
services/api/tests/: __init__.py  conftest.py  helpers.py  test_action_prepare_safety.py  test_actions.py  test_asr_quota.py  test_asr_security.py  test_auth.py  test_db_session.py  test_events_api.py  test_health.py  test_hotwords.py  test_migrations.py  test_notice_radar.py  test_notice_radar_safety.py  test_observability.py  test_oidc.py  test_privacy.py  test_retention_scheduler.py  test_settings.py  test_sqlite_backup.py  test_start_demo.py  test_startup.py  test_tasks_api.py  test_voice_lineage.py  test_write_challenges.py
services/api/tests/e2e/: conftest.py  test_acceptance_scenarios.py
services/api/tests/services/: conftest.py  test_action_coverage.py  test_ai_routes.py  test_asr.py  test_asr_persistence.py  test_conversations.py  test_correction.py  test_document_upload_limits.py  test_evaluation.py  test_intent.py  test_knowledge.py  test_notice_algorithms.py  test_notice_service_direct.py  test_public_asr_demo.py  test_seed_demo_contract.py  test_synthetic_evaluation_dataset.py  test_verification.py
(+129 files in other folders)
