[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "campusvoice-api"
version = "0.1.0"
description = "Verified campus voice assistant API"
requires-python = ">=3.11,<3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pypdf>=5,<7",
  "python-dateutil>=2.9,<3",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]
ai = [
  "funasr>=1.2,<2",
  "modelscope>=1.22,<2",
  "openai-whisper==20250625",
  "sentence-transformers>=3,<6",
  "soundfile>=0.13,<1",
  "torch>=2.11,<2.12",
  "torchaudio>=2.11,<2.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "funasr",
  "funasr.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "torch",
  "torch.*",
  "whisper",
  "whisper.*",
]
ignore_missing_imports = true
